Rewrite deployment to simplify for integration of AppClient and proper handling of manifest class-path and extensions.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@46959 13f79535-47bb-0310-9956-ffa450edef68